--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -8,6 +8,8 @@ jobs:
     steps:
       - name: echo a string
         run: echo 'Hello World'
+      - name: failing echo a string
+        run: eccho 'Hello World'
       - name: multiline script
         run: |
           node -v
