--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -8,9 +8,14 @@ jobs:
     steps:
       - name: echo a string
         run: echo 'Hello World'
-      - name: failing echo a string
-        run: eccho 'Hello World'
+      # - name: failing echo a string
+      #   run: eccho 'Hello World'
       - name: multiline script
         run: |
           node -v
           npm -v
+      - name: python command
+        run: |
+          import platform
+          print (platform.processor())
+        shell: python
