--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -21,6 +21,7 @@ jobs:
         shell: python
   run-windows-command:
     runs-on: windows-latest
+    needs: ["run-shell-comand"]
     steps:
       - name: Directory PowerShell
         run: Get-Location
