--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -10,8 +10,16 @@ jobs:
         run: |
           pwd
           ls -a
-      - name: Checkout
-        uses: actions/checkout@v3
+      - name: Checkout not using an already created action
+        run: |
+          echo $GITHUB_SHA
+          echo $GITHUB_REPOSITORY
+          echo $GITHUB_WORKSPACE
+          echo "${{ github.token }}"
+          git clone git@github:$GITHUB_REPOSITORY
+          git checkout
+      # - name: Checkout
+      #   uses: actions/checkout@v3
       - name: List Files after Checkout
         run: |
           pwd
