--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -16,7 +16,7 @@ jobs:
           echo $GITHUB_REPOSITORY
           echo $GITHUB_WORKSPACE
           echo "${{ github.token }}"
-          git clone git@github.com:$GITHUB_REPOSITORY.git
+          git clone https://github.com/$GITHUB_REPOSITORY.git
           git checkout
       # - name: Checkout
       #   uses: actions/checkout@v3
