Adding repository dispatch example

--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -2,7 +2,11 @@ name: Actions Workflow
 
 # on: [push, pull_request]
 on:
-  push:
+  # push:
+  # schedule:
+  #   -  cron: "0/30 * * * *"
+  repository_dispatch:
+    types: [build]
   pull_request:
     types: [closed, assigned, opened, reopened]
 
