--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -9,7 +9,7 @@ jobs:
   decrypt:
     runs-on: ubuntu-latest
     steps: 
-      uses: actions/checkout@v1
+      - uses: actions/checkout@v1
       - name: Decrypt file
         run: gpg --quiet --batch --yes --decrypt --passphrase="$PASSPHRASE" --output $HOME/secret.json secret.json.gpg
         env: 
