--- a/.github/workflows/context.yml
+++ b/.github/workflows/context.yml
@@ -2,19 +2,44 @@ name: Context testing
 on: push
 
 jobs:
+  functions:
+    runs-on: ubuntu-latest
+    steps:
+      - name: dump
+        run: | 
+          echo ${{ contains('hello', 'll')}}
+          echo ${{ startsWith('hello', 'he')}}
+          echo ${{ endWith('hello', 'lo')}}
+          echo ${{ format('hello {0} {1} {2}', 'World', '!', '!')}}
   dump_contexts_to_log:
     runs-on: ubuntu-latest
+    if: github.event_name == 'push'
     steps:
       - name: Dump GitHub context
         id: github_context_step
-        run: echo '${{ toJSON(github) }}'
+        env:
+          GITHUB_CONTEXT: '${{ toJSON(github) }}'
+        # run: echo "$GITHUB_CONTEXT"
+        run: eccho "$GITHUB_CONTEXT" # typo to make it fail
       - name: Dump job context
-        run: echo '${{ toJSON(job) }}'
+        if: failure()
+        env:
+          JOB_CONTEXT: '${{ toJSON(job) }}'
+        run: echo "$JOB_CONTEXT"
       - name: Dump steps context
-        run: echo '${{ toJSON(steps) }}'
+        env:
+          STEPS_CONTEXT: '${{ toJSON(steps) }}'
+        run: echo "$STEPS_CONTEXT"
       - name: Dump runner context
-        run: echo '${{ toJSON(runner) }}'
+        if: always()
+        env:
+          RUNNER_CONTEXT: '${{ toJSON(runner) }}'
+        run: echo "$RUNNER_CONTEXT"
       - name: Dump strategy context
-        run: echo '${{ toJSON(strategy) }}'
+        env:
+          STRATEGY_CONTEXT: '${{ toJSON(strategy) }}'
+        run: echo "$STRATEGY_CONTEXT"
       - name: Dump matrix context
-        run: echo '${{ toJSON(matrix) }}'
+        env:
+          MATRIX_CONTEXT: '${{ toJSON(matrix) }}'
+        run: echo "$MATRIX_CONTEXT"
