trying to skip other workflows

--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -1,6 +1,11 @@
 name: ENV Variables 
 
-on: push
+# on: push
+on: # to avoid running
+  label:
+    types:
+      - created
+
 env:
   # WF_ENV: ${{secrets.WF_ENV }}
   WF_ENV: Available to all jobs
