--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -6,10 +6,21 @@ jobs:
     strategy:
       matrix:
         os: [macos-latest, ubuntu-latest, windows-latest]
-        node-version: [6,8,10]
+        node-version: [6, 8, 10]
+        include   :
+          - os: ubuntu-latest
+            node-version:  8
+            is_ubuntu_8: "true"
+        exclude:
+          - os: ubuntu-latest
+            node-version: 6
+          - os: macos-latest
+            node-version: 8
       # fail-fast: true
       # max-parallel: 2
     runs-on: ${{ matrix.os }}
+    env: 
+      IS_UBUNTU_8: ${{ matrix.is_ubuntu_8 }}
     steps:
       - name: Log node version
         run: node -v
@@ -17,4 +28,6 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - name: Log node version
-        run: node -v
+        run: | 
+          node -v
+          echo $IS_UBUNTU_8
