--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -6,7 +6,7 @@ jobs:
   docker-steps:
     runs-on: ubuntu-latest
     container: 
-      image: node:10.180-jessie
+      image: node:10.18.0-jessie
     steps:
       - name: Log node version
         run: node -v
@@ -15,7 +15,7 @@ jobs:
         with: 
           entrypoint: 'bin/echo'
           args: 'Hello World' 
-      - name: Step with docker
+      - name: Log node version
         uses: docker://node:12.14.1-alpine3.10
         with: 
           entrypoint: /usr/local/bin/node
