--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Step with docker
         uses: docker://node:12.14.1-alpine3.10
         with: 
-          entrypoint: 'bin/echo'
+          entrypoint: '/bin/echo'
           args: 'Hello World' 
       - name: Log node version
         uses: docker://node:12.14.1-alpine3.10
