trying to deal with matrix

--- a/.github/workflows/caller_workflow.yml
+++ b/.github/workflows/caller_workflow.yml
@@ -7,5 +7,5 @@ jobs:
 
   call-workflow:
     uses: .github/workflows/reusable-workflow.yml@main
-    with:
-      test-group: BACKOFFICE
+    # with:
+    #   test-group: BACKOFFICE
