--- a/.github/workflows/reusable_workflow.yml
+++ b/.github/workflows/reusable_workflow.yml
@@ -8,6 +8,9 @@ on:
         required: true
         default: '["A", "B", "C", "D"]'
         type: string
+
+env: 
+  TEST_GROUP: ${{ inputs.test-group }}
     
 jobs:
   first-job:
@@ -15,13 +18,10 @@ jobs:
     strategy:
       matrix:
         # test-group: ${{ inputs.test-group }}
-        test-group: ${{ fromJSON(inputs.test-group)}}
+        test-group: ${{ fromJSON(env.TEST_GROUP)}}
         # test-group: [A, B, C]
       fail-fast: true
     runs-on: ubuntu-latest
-
-    env: 
-      TEST_GROUP: ${{ matrix.test-group }}
 
     steps:
       - name: Checkout
@@ -30,17 +30,15 @@ jobs:
         run: |
           pwd
           ls -a
-      - name: Print something to the console
-        run: | 
-          echo 'Helloooo'
-          echo $TEST_GROUP
       - name: Push a random file
+        env: 
+          CURRENT_TEST_GROUP: ${{ matrix.test-group }}
         run: | 
-          echo $TEST_GROUP >> files/$TEST_GROUP.txt
+          echo $CURRENT_TEST_GROUP >> files/$CURRENT_TEST_GROUP.txt
       - name: Publish Artifacts
         if: always()
         uses: actions/upload-artifact@v3
         with:
-          name: allure-results
+          name: results
           path: files
           retention-days: 2
