--- a/.github/workflows/reusable_workflow.yml
+++ b/.github/workflows/reusable_workflow.yml
@@ -25,37 +25,37 @@ jobs:
         # run: echo "test-group=${{ inputs.test-group }}" >> "$GITHUB_OUTPUT"
         env: 
           TEST_GROUP: ${{ inputs.test-group }}
-        run: echo ${{fromJson( $TEST_GROUP )}}
+        run: echo ${{fromJson(env.TEST_GROUP)}}
 
-  second-job:
+  # second-job:
 
-    needs: first-job
-    runs-on: ubuntu-latest
+  #   needs: first-job
+  #   runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        # test-group: ${{ inputs.test-group }}
-        test-group: ${{fromJson( $TEST_GROUP )}}
-        # test-group: [A, B, C]
-      fail-fast: true
+  #   strategy:
+  #     matrix:
+  #       # test-group: ${{ inputs.test-group }}
+  #       test-group: ${{fromJson(env.TEST_GROUP)}}
+  #       # test-group: [A, B, C]
+  #     fail-fast: true
       
 
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: List Files after checkout
-        run: |
-          pwd
-          ls -a
-      - name: Push a random file
-        env: 
-          CURRENT_TEST_GROUP: ${{ matrix.test-group }}
-        run: | 
-          echo $CURRENT_TEST_GROUP >> files/$CURRENT_TEST_GROUP.txt
-      - name: Publish Artifacts
-        if: always()
-        uses: actions/upload-artifact@v3
-        with:
-          name: results
-          path: files
-          retention-days: 2
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v3
+  #     - name: List Files after checkout
+  #       run: |
+  #         pwd
+  #         ls -a
+  #     - name: Push a random file
+  #       env: 
+  #         CURRENT_TEST_GROUP: ${{ matrix.test-group }}
+  #       run: | 
+  #         echo $CURRENT_TEST_GROUP >> files/$CURRENT_TEST_GROUP.txt
+  #     - name: Publish Artifacts
+  #       if: always()
+  #       uses: actions/upload-artifact@v3
+  #       with:
+  #         name: results
+  #         path: files
+  #         retention-days: 2
