--- a/.github/workflows/matrix2.yml
+++ b/.github/workflows/matrix2.yml
@@ -9,8 +9,8 @@ on:
         type: string
         default: '["A", "B", "C", "D"]'
   push:
-    branches:
-      - main
+    # branches:
+      # - main
   schedule:
     - cron: "0 09 * * *"
 
@@ -32,35 +32,35 @@ jobs:
           TEST_GROUP: ${{ inputs.test_group }}
         run: echo ${{fromJson(env.TEST_GROUP)}}
 
-  # second-job:
+  second-job:
 
-  #   needs: first-job
-  #   runs-on: ubuntu-latest
+    needs: first-job
+    runs-on: ubuntu-latest
 
-  #   strategy:
-  #     matrix:
-  #       # test-group: ${{ inputs.test-group }}
-  #       test-group: ${{fromJson(env.TEST_GROUP)}}
-  #       # test-group: [A, B, C]
-  #     fail-fast: true
+    strategy:
+      matrix:
+        # test-group: ${{ inputs.test-group }}
+        test-group: ${{fromJson(env.TEST_GROUP)}}
+        # test-group: [A, B, C]
+      fail-fast: true
       
 
-  #   steps:
-  #     - name: Checkout
-  #       uses: actions/checkout@v3
-  #     - name: List Files after checkout
-  #       run: |
-  #         pwd
-  #         ls -a
-  #     - name: Push a random file
-  #       env: 
-  #         CURRENT_TEST_GROUP: ${{ matrix.test-group }}
-  #       run: | 
-  #         echo $CURRENT_TEST_GROUP >> files/$CURRENT_TEST_GROUP.txt
-  #     - name: Publish Artifacts
-  #       if: always()
-  #       uses: actions/upload-artifact@v3
-  #       with:
-  #         name: results
-  #         path: files
-  #         retention-days: 2
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: List Files after checkout
+        run: |
+          pwd
+          ls -a
+      - name: Push a random file
+        env: 
+          CURRENT_TEST_GROUP: ${{ matrix.test-group }}
+        run: | 
+          echo $CURRENT_TEST_GROUP >> files/$CURRENT_TEST_GROUP.txt
+      - name: Publish Artifacts
+        if: always()
+        uses: actions/upload-artifact@v3
+        with:
+          name: results
+          path: files
+          retention-days: 2
