--- a/.github/workflows/matrix2.yml
+++ b/.github/workflows/matrix2.yml
@@ -59,7 +59,7 @@ jobs:
     strategy:
       matrix:
         # test-group: ${{ inputs.test-group }}
-        test-group: ${{ fromJson(needs.first-job.outputs.matrix) }}
+        test-group: ${{ needs.first-job.outputs.matrix }}
         # test-group: [A, B, C]
       fail-fast: true
       
