--- a/.github/workflows/matrix2.yml
+++ b/.github/workflows/matrix2.yml
@@ -42,7 +42,7 @@ jobs:
           if [[ ${{ github.event_name}} == "workflow_dispatch" ]]; then
             echo "matrix=${{ inputs.test_group }}" >> $GITHUB_OUTPUT
           else
-            echo "matrix=${{ env.ALL_TEST_GROUPS }}" >> $GITHUB_OUTPUT
+            echo "matrix='${{ env.ALL_TEST_GROUPS }}'" >> $GITHUB_OUTPUT
           fi
       - name: Print output
         run: |
