--- a/.github/workflows/matrix2.yml
+++ b/.github/workflows/matrix2.yml
@@ -40,9 +40,9 @@ jobs:
         id: set-matrix
         run: | 
           if [[ ${{ github.event_name}} == "workflow_dispatch" ]]; then
-            echo "matrix=${{ inputs.test_group }}" >> $GITHUB_OUTPUT
+            echo "::set-output name=matrix::${{ inputs.test_group }}" >> $GITHUB_OUTPUT
           else
-            echo "matrix='${{ env.ALL_TEST_GROUPS }}'" >> $GITHUB_OUTPUT
+            echo "::set-output name=matrix::${{ env.ALL_TEST_GROUPS }}"
           fi
       - name: Print output
         run: |
