--- a/.github/workflows/matrix2.yml
+++ b/.github/workflows/matrix2.yml
@@ -7,7 +7,7 @@ on:
         description: 'Which test groups do you want to run?'
         required: true
         type: string
-        default: "[\"A\", \"B\", \"C\", \"D\"]"
+        default: "['A', 'B', 'C', 'D']"
   push:
     # branches:
       # - main
@@ -16,7 +16,7 @@ on:
 
 env: 
   # ALL_TEST_GROUPS: '["A", "B"]'
-  ALL_TEST_GROUPS: "['A', 'B']"
+  ALL_TEST_GROUPS: "['A', 'B', 'C', 'D']"
     
 jobs:
   first-job:
@@ -26,17 +26,6 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # - name: Define Test Matrix (workflow_dispatch)
-      #   id: set-matrix
-      #   if: ${{ github.event_name == 'workflow_dispatch' }}
-      #   # run: echo "test-group=${{ inputs.test-group }}" >> "$GITHUB_OUTPUT"
-      #   env: 
-      #     TEST_GROUP: ${{ inputs.test_group }}
-      #   run: |
-      #     echo ${{fromJson(env.TEST_GROUP)}}
-      #     # echo "matrix=${{ inputs.test-group }}" >> "$GITHUB_OUTPUT"
-
-
       - name: Define Test Matrix (workflow_dispatch)
         id: set-matrix
         run: | 
