using to and from json

--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -10,6 +10,11 @@ env:
   # WF_ENV: ${{secrets.WF_ENV }}
   WF_ENV: Available to all jobs
 
+
+            if [[ ${{ inputs.target_environment }} == "custom" ]]; then
+            echo "branch_name = ${BRANCH_NAME////-}" >> $GITHUB_OUTPUT
+          fi
+
 jobs:
   decrypt:
     runs-on: ubuntu-latest
